tidy code to use products in carts in place of 'items'
